# discord-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
disman/: __init__.py  __main__.py  datastore.py  instance.py  instanceman.py  process.py  updater.py  util.py
disman/migrations/: __init__.py  init.py
