[tool.poetry]
name = "discord-manager"
version = "0.1.0"
description = "An instance manager for Discord"
authors = ["Mike A. <32306794+DismissedGuy@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "disman"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
httpx = "^0.23.3"
psutil = "^5.9.4"
babel = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
